--- a/ckanext/gdpr/templates/gdpr/policy.html
+++ b/ckanext/gdpr/templates/gdpr/policy.html
@@ -14,7 +14,7 @@
     <div class="module-content">
       {% block primary_content_inner %}
       <h1 class="page-heading">
-        {% block page_heading %}{{ c.policy.content }}{% endblock %}
+        {% block page_heading %}{{ c.policy.content | safe }}{% endblock %}
       </h1>
       <h2>{{ _('Users accepting the policy') }}</h2>
       <table class="table table-striped">
