Adding message to request deletion

--- a/ckanext/gdpr/templates/user/register.html
+++ b/ckanext/gdpr/templates/user/register.html
@@ -34,6 +34,12 @@
     </div>
   {% endfor %}
 
+  <div class="control-group">
+    <div class="controls">
+      {{ _('You can always delete your account sending a request to ') }}<a href="mailto:info@edincubator.eu">info@edincubator.eu</a>.
+    </div>
+  </div>
+
   {{ form.required_message() }}
 
   {% if g.recaptcha_publickey %}
