--- a/ckanext/gdpr/templates/user/gdpr_edit_user_form.html
+++ b/ckanext/gdpr/templates/user/gdpr_edit_user_form.html
@@ -54,6 +54,11 @@
         </div>
       </div>
     {% endfor %}
+    <div class="control-group">
+      <div class="controls">
+        {{ _('You can always delete your account sending a request to ') }}<a href="mailto:info@edincubator.eu">info@edincubator.eu</a>.
+      </div>
+    </div>
   </fieldset>
 
   <div class="form-actions">
