--- a/ckanext/gdpr/templates/user/perform_reset.html
+++ b/ckanext/gdpr/templates/user/perform_reset.html
@@ -10,7 +10,7 @@
       <div class="control-group">
         <div class="controls">
           <label class="checkbox" for="field-terms-of-use">
-            <input name="policy-{{ policy.id }}" id="policy-{{ policy.id }}" value="True" type="checkbox">
+            <input name="policy-{{ policy.id }}" id="policy-{{ policy.id }}" value="True" type="checkbox" {% if h.check_user_accepted_policy(c.user_dict['id'], policy.id) %} checked{% endif %}>
             {{ policy.content | safe }}
             {% if policy.required %}
               <span title="This field is required" class="control-required">*</span>
