Fixing style issues

--- a/ckanext/gdpr/templates/user/register.html
+++ b/ckanext/gdpr/templates/user/register.html
@@ -14,7 +14,7 @@
   <div class="control-group control-full">
     <label class="control-label" for="field-gdpr-text">Terms of use</label>
     <div class="controls">
-      <div style="width: 500px;height: 300px;overflow: auto;">
+      <div style="overflow: auto;">
         {{ h.get_gdpr().tos | safe }}
       </div>
     </div>
