Adapting policy and tos to REACH

--- a/ckanext/gdpr/templates/gdpr/privacy.html
+++ b/ckanext/gdpr/templates/gdpr/privacy.html
@@ -1,6 +1,6 @@
 {% extends 'page.html' %}
 
-{% block subtitle %}{{ _('EDI Privacy Policy for the EDI Data Catalogue') }}{% endblock %}
+{% block subtitle %}{{ _('REACH Privacy Policy for the REACH Data Catalogue') }}{% endblock %}
 
 {% block breadcrumb_content %}
   <li class="active">{{ h.nav_link(_('Privacy Policy'), controller='ckanext.gdpr.controller:GDPRController', action='privacy') }}</li>
@@ -11,7 +11,7 @@
   <div class="module-content">
     {% block primary_content_inner %}
     <h1 class="page-heading">
-      {% block page_heading %}{{ _('EDI Privacy Policy for the EDI Data Catalogue') }}{% endblock %}
+      {% block page_heading %}{{ _('REACH Privacy Policy for the REACH Data Catalogue') }}{% endblock %}
     </h1>
 
     <p><h2>Controller &ndash; Who is the controller of the personal data that you supply?</h2></p>
@@ -28,16 +28,16 @@
       Email: &nbsp;dpo@deusto.es
     </address>
     <p><h2>Purpose &ndash; Why do we process your personal data? </h2></p>
-    <p><span style="font-weight: 400;">University of Deusto stores and processes the personal data you supply to manage the EDI incubation process for promoting Big Data experimentation in Europe. Aggregated data previously anonymized about collected information regarding EDI incubation will be generated and published publicly. </span></p>
+    <p><span style="font-weight: 400;">University of Deusto stores and processes the personal data you supply to manage the REACH incubation process for promoting Big Data experimentation in Europe. Aggregated data previously anonymized about collected information regarding REACH incubation will be generated and published publicly. </span></p>
     <p><h2>Legal ground &ndash; What is the legal basis to process your personal data? </h2></p>
-    <p><span style="font-weight: 400;">By accepting our Terms of Service, we have entered a pre-contractual relationship by which we provide you access to the EDI Data Catalogue. Therefore, the legal basis for the processing of your personal data is the contractual necessity. </span></p>
-    <p><span style="font-weight: 400;">The provision of your personal data is optional, but in the absence of the requested data, we will be unable to provide you access to the EDI Data Catalogue.</span></p>
-    <p><span style="font-weight: 400;">If we send you any dissemination or communication information about our activities and services or carry out any profiling about your interactions with us, this will be exclusively about the EDI project.</span></p>
+    <p><span style="font-weight: 400;">By accepting our Terms of Service, we have entered a pre-contractual relationship by which we provide you access to the REACH Data Catalogue. Therefore, the legal basis for the processing of your personal data is the contractual necessity. </span></p>
+    <p><span style="font-weight: 400;">The provision of your personal data is optional, but in the absence of the requested data, we will be unable to provide you access to the REACH Data Catalogue.</span></p>
+    <p><span style="font-weight: 400;">If we send you any dissemination or communication information about our activities and services or carry out any profiling about your interactions with us, this will be exclusively about the REACH project.</span></p>
     <p><h2>Data Recipients &ndash;Who will be the recipients of your personal data? </h2></p>
     <p><span style="font-weight: 400;">Your personal data will be shared with Deusto Foundation, an entity based in Spain with a legal link to University of Deusto. Processing your request does not involve the transfer of your personal data to other third parties, unless otherwise provided by law. Nor does it involve the international transfer of said information. </span></p>
     <p><h2>Preservation &ndash; How long will we keep your data?</h2></p>
     <ul>
-    <li style="font-weight: 400;"><span style="font-weight: 400;">The gathered personal data will be kept during the lifetime to the EDI project.</span></li>
+    <li style="font-weight: 400;"><span style="font-weight: 400;">The gathered personal data will be kept during the lifetime to the REACH project.</span></li>
     <li style="font-weight: 400;"><span style="font-weight: 400;">The data will be kept for statistical purposes and your personal details will be removed.</span></li>
     <li style="font-weight: 400;"><span style="font-weight: 400;">The data needed to send communications related to the EDI project and profiles will be kept until the person concerned explicitly requests their records to be removed.</span></li>
     </ul>
