--- a/ckanext/gdpr/templates/gdpr/tos.html
+++ b/ckanext/gdpr/templates/gdpr/tos.html
@@ -15,8 +15,8 @@
     </h1>
 
     <p><h2>Background and introduction</h2></p>
-    <p><span style="font-weight: 400;">EDI Data Catalogue is part of the European Data Incubator (EDI) project, funded by the European Union&rsquo;s Horizon 2020 research and innovation programme under grant agreement No 779790.</span></p>
-    <p><span style="font-weight: 400;">The European Data Incubator is a Big Data incubator offering a dedicated acceleration programme and up to &euro;100k equity free for EU based startups and teams. EDI defies Big Data innovators to sort out data -based challenges for a range of EU organizations in a myriad of sectors, or to propose their own concepts/ ideas making use of our Data Catalogue.</span></p>
+    <p><span style="font-weight: 400;">REACH Data Catalogue is part of the EuRopEAn incubator for trusted and secure data value CHains (REACH) project, funded by the European Union&rsquo;s Horizon 2020 research and innovation programme under grant agreement No 951981.</span></p>
+    <p><span style="font-weight: 400;">The REACH Incubator is a Data Value Chain (DVC) incubator offering a dedicated acceleration programme and up to &euro;100k equity free for EU based startups and teams. REACH defies DVC innovators to sort out data -based challenges for a range of EU organizations in a myriad of sectors, or to propose their own concepts/ideas making use of our Data Catalogue.</span></p>
     <p><span style="font-weight: 400;">The Data Catalogue is stored and managed by:</span></p>
     <address>
       <strong>University of Deusto</strong><br />
@@ -24,7 +24,7 @@
       48007 Bilbao<br />
       Spain
     </address>
-    <p><span style="font-weight: 400;">Please read these Terms of Service carefully before you register to EDI Data Catalogue. By registering, you accept these Terms of Service and agree to comply with them.</span></p>
+    <p><span style="font-weight: 400;">Please read these Terms of Service carefully before you register to REACH Data Catalogue. By registering, you accept these Terms of Service and agree to comply with them.</span></p>
     <p><h2>Use of the Data Catalogue</h2></p>
     <p><span style="font-weight: 400;">Any use of the Data Catalogue and/or its contents must be lawful, authorized and ethical. You may not use the data contained in the Data Catalogue in an unlawful, unauthorized, or unethical manner. </span></p>
     <p><span style="font-weight: 400;">In any event, the University of Deusto will not be held responsible for any abusive use of the Data Catalogue and/or its contents incurred into by you.</span></p>
