Fixing info email address

--- a/ckanext/gdpr/templates/user/register.html
+++ b/ckanext/gdpr/templates/user/register.html
@@ -36,7 +36,7 @@
 
   <div class="control-group">
     <div class="controls">
-      {{ _('You can always delete your account sending a request to ') }}<a href="mailto:info@edincubator.eu">info@edincubator.eu</a>.
+      {{ _('You can always delete your account sending a request to ') }}<a href="mailto:info@reach-incubator.eu">info@reach-incubator.eu</a>.
     </div>
   </div>
 
